third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/zeroable/with_comma.stderr
error: unexpected token, expected `}`
  --> tests/ui/compile-fail/zeroable/with_comma.rs:13:34
   |
13 |         ..Zeroable::init_zeroed(),
   |                                  ^
